--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
         <div class="left-side">
             <h2></h2>
             <div class="gallery">
-                <img src="./gallery/TB.jpg" alt="Image 1">
+                <img src="./gallery/TB2.jpg" alt="Image 1">
                 <img src="./gallery/TB1.jpg" alt="Image 2">
 		 <img src="./gallery/SB12.jpg" alt="Image 3">
 		 <img src="./gallery/SB8.jpg" alt="Image 4">
