--- a/index.html
+++ b/index.html
@@ -486,19 +486,19 @@ img {
 
 <div class="mySlides fade">
   <div class="numbertext">1 / 3</div>
-  <img src="C:/Users/hp/Desktop/college/gallery/aa.jpg" style="width:100%">
+  <img src="./gallery/TB2.jpg" style="width:100%">
   <div class="text">Caption Text</div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext">2 / 3</div>
-  <img src="C:/Users/hp/Desktop/college/gallery/aa.jpg" style="width:100%">
+  <img src="./gallery/TB1.jpg" style="width:100%">
   <div class="text">Caption Two</div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext">3 / 3</div>
-  <img src="C:/Users/hp/Desktop/college/gallery/aa.jpg" style="width:100%">
+  <img src="./gallery/SB11.jpg" style="width:100%">
   <div class="text">Caption Three</div>
 </div>
 
