--- a/index.html
+++ b/index.html
@@ -408,12 +408,8 @@ img {
         <div class="left-side">
             <h2></h2>
             <div class="gallery">
-                <img src="./gallery/TB2.jpg" alt="Image 1">
-                <img src="./gallery/TB1.jpg" alt="Image 2">
-		 <img src="./gallery/SB12.jpg" alt="Image 3">
-		 <img src="./gallery/SB8.jpg" alt="Image 4">
-                <img src="./gallery/22.jpg" alt="Image 5">
-                <img src="./gallery/33.jpg" alt="Image 6">
+                <img src="./gallery/sir suleman.jpg" alt="Image 1">
+                
             </div>
             <button class="nav-btn prev-btn" onclick="moveSlide(-1)">&#10094;</button>
             <button class="nav-btn next-btn" onclick="moveSlide(1)">&#10095;</button>
