--- a/index.html
+++ b/index.html
@@ -387,6 +387,9 @@ img {
                     <li class="nav-item">
                         <a class="nav-link text-black active" aria-current="page" href="index.html">HOME</a>
                     </li>
+		<li class="nav-item">
+                        <a class="nav-link text-black active" aria-current="page" href="Notice.html">Daily Update</a>
+                    </li>
                     <li class="nav-item">
                         <a class="nav-link text-black" href="ONLINE-TEST.html">ONLINE TEST</a>
                     </li>
