--- a/ABOUT-US.html
+++ b/ABOUT-US.html
@@ -246,8 +246,8 @@
             </div>
 		
 			 <div class="lecturer" style="background-color: #FFF8DC; border: 1px solid #ddd; border-radius: 8px; width: 300px; padding: 20px; text-align: center; box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);">
-                <img src="gallery/SB1.jpg" alt="sir" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 15px;">
-                <div class="lecturer-name" style="font-size: 18px; font-weight: bold; margin-bottom: 10px; color: #333;">Mr Aijaz Ali Jatoi </div>
+                <img src="gallery/sir a.jpg" alt="sir" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 15px;">
+                <div class="lecturer-name" style="font-size: 18px; font-weight: bold; margin-bottom: 10px; color: #333;">Mr Aijaz Ali Jatoe </div>
                 <div class="lecturer-info" style="font-size: 14px; color: #333; margin-bottom: 8px;">Lecturer: Botony</div>
                 <div class="lecturer-info" style="font-size: 14px; color: #333; margin-bottom: 8px;">Cell No: 03</div>
                 <div class="lecturer-info" style="font-size: 14px; color: #333; margin-bottom: 8px;">@gmail.com</div>
