--- a/index.html
+++ b/index.html
@@ -385,10 +385,10 @@ img {
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link text-black active" href="index.html">HOME</a>
+                        <a class="nav-link text-black" href="index.html">HOME</a>
                     </li>
 		<li class="nav-item">
-                        <a class="nav-link text-black active" href="Notice.html">Daily Update</a>
+                        <a class="nav-link text-black" href="Notice.html">Daily Update</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-black" href="ONLINE-TEST.html">ONLINE TEST</a>
