--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                 font-size: 16px; /* Make text more readable on mobile */
             }
         }
-img {
+.img {
   float: left;
   border: 1px dotted black;
   margin: 0px 0px 15px 20px;
