--- a/index.html
+++ b/index.html
@@ -436,6 +436,9 @@ img {
 	    Note: Students must follow college rules and wear the official uniform neatly and respectfully, reflecting the values of our institution!</p>
 <p style="padding-left: 20px;">
   <img src="C:/Users/hp/Desktop/college/gallery/aa.jpg" width="150" height="140" style="float: left; margin-right: 15px;">
+	<p style="color: red; font-size: 1.3rem; font-family: Arial, sans-serif; text-align: center; padding-left: 20px;">
+  PRINCIPAL'S MESSAGE<br> KHALID HUSSAIN BURIRO
+</p>
   Education is the most powerful tool you can use to shape your future.<br> 
   It is not simply about earning grades, but about developing your intellect, character, and the skills needed to navigate the world ahead. 
   Through education, you gain the ability to think critically, solve problems, and contribute meaningfully to society.
