--- a/index.html
+++ b/index.html
@@ -435,11 +435,11 @@ img {
     <p style="text-align: center; color: black; font-size: 1.3rem; font-family: Arial, sans-serif; padding-left: 1em; padding-right: 2em;">
 	    Note: Students must follow college rules and wear the official uniform neatly and respectfully, reflecting the values of our institution!</p>
 <p style="margin-left: 20px; margin-right: 20px;">
-  <img src="/gallery/sir khalid.jpg" width="150" height="140" style="float: left; margin-right: 15px;">
+  <img src="gallery/sir khalid.jpg" width="150" height="140" style="float: left; margin-right: 15px;">
 	<p style="color: red; font-size: 1.3rem; font-family: Arial, sans-serif; text-align: center; padding-left: 20px;">
   PRINCIPAL'S MESSAGE<br> KHALID HUSSAIN BURIRO
 </p>
-<p style="padding-left: 10px;">
+<p style="padding-left: 10px; padding-right: 10px;">
   Education is the most powerful tool you can use to shape your future. It is not simply about earning grades, but about developing your intellect, character, and the skills needed to navigate the world ahead. Through education, you gain the ability to think critically, solve problems, and contribute meaningfully to society.
 As you move forward in your studies, always remember that education is not just about what you learn but how you live and work each day. Let discipline guide you in your efforts, and education will open doors you never imagined.<br> 
    </p>     
