--- a/index.html
+++ b/index.html
@@ -384,6 +384,7 @@ img {
         <div class="left-side">
             <h2></h2>
             <div class="gallery">
+		<h2 style="text-align: center;"> Prof Muhammad Suliman Siyal</h2>
                 <img src="./gallery/sir suleman.jpg" alt="Image 1">
                 
             </div>
