--- a/index.html
+++ b/index.html
@@ -382,9 +382,9 @@ img {
 <div class="container">
         <!-- Left Side - Image Gallery (Slideshow) -->
         <div class="left-side">
-            <h2></h2>
+            <h2> Prof Muhammad Suliman Siyal</h2>
             <div class="gallery">
-		<h2 style="text-align: center;"> Prof Muhammad Suliman Siyal</h2>
+		
                 <img src="./gallery/sir suleman.jpg" alt="Image 1">
                 
             </div>
