--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
   margin: 0px 0px 15px 20px;
 }
 	    .mySlides {display: none}
-img {
+.img {
   vertical-align: middle;
   max-width: 120%; /* Limit the image's width */
   max-height: 650px; /* Limit the image's height */
