--- a/Government-Girls-College-Daulatpur.html
+++ b/Government-Girls-College-Daulatpur.html
@@ -290,7 +290,223 @@
                 </div>
             </div>
         </div>
-
+   <div class="gallery-group">
+            
+			 <h4 style="text-align:center; font-size: 1rem; color: red;">Science exhibition projects 25</h4>
+            <div class="gallery">
+                <div class="gallery-item">
+                    <img src="./gallery/s1.jpg" alt="Image 1">
+                    <div class="overlay"></div>
+                    <div class="overlay-message">Right-click is disabled.</div>
+                </div>
+                <div class="gallery-item">
+                    <img src="./gallery/s2.jpg" alt="Image 2">
+                    <div class="overlay"></div>
+                    <div class="overlay-message">Right-click is disabled.</div>
+                </div>
+                <div class="gallery-item">
+                    <img src="./gallery/s3.jpg" alt="Image 3">
+                    <div class="overlay"></div>
+                    <div class="overlay-message">Right-click is disabled.</div>
+                </div>
+				 <div class="gallery-item">
+                    <img src="./gallery/s4.jpg" alt="Image 4">
+                    <div class="overlay"></div>
+                    <div class="overlay-message">Right-click is disabled.</div>
+                </div>
+				 <div class="gallery-item">
+                    <img src="./gallery/s5.jpg" alt="Image 5">
+                    <div class="overlay"></div>
+                    <div class="overlay-message">Right-click is disabled.</div>
+                </div>
+				 <div class="gallery-item">
+                    <img src="./gallery/s6.jpg" alt="Image 6">
+                    <div class="overlay"></div>
+                    <div class="overlay-message">Right-click is disabled.</div>
+                </div>
+				 <div class="gallery-item">
+                    <img src="./gallery/s7.jpg" alt="Image 7">
+                    <div class="overlay"></div>
+                    <div class="overlay-message">Right-click is disabled.</div>
+                </div>
+				 <div class="gallery-item">
+                    <img src="./gallery/s8.jpg" alt="Image 8">
+                    <div class="overlay"></div>
+                    <div class="overlay-message">Right-click is disabled.</div>
+                </div>
+				 <div class="gallery-item">
+                    <img src="./gallery/s9.jpg" alt="Image 9">
+                    <div class="overlay"></div>
+                    <div class="overlay-message">Right-click is disabled.</div>
+                </div>
+			<div class="gallery-item">
+                    <img src="./gallery/s10.jpg" alt="Image 10">
+                    <div class="overlay"></div>
+                    <div class="overlay-message">Right-click is disabled.</div>
+                </div>
+				 <div class="gallery-item">
+                    <img src="./gallery/s11.jpg" alt="Image 11">
+                    <div class="overlay"></div>
+                    <div class="overlay-message">Right-click is disabled.</div>
+                </div>
+		    <div class="gallery-item">
+                    <img src="./gallery/s12.jpg" alt="Image 12">
+                    <div class="overlay"></div>
+                    <div class="overlay-message">Right-click is disabled.</div>
+                </div>
+				 <div class="gallery-item">
+                    <img src="./gallery/s13.jpg" alt="Image 13">
+                    <div class="overlay"></div>
+                    <div class="overlay-message">Right-click is disabled.</div>
+                </div>
+		    <div class="gallery-item">
+                    <img src="./gallery/s14.jpg" alt="Image 14">
+                    <div class="overlay"></div>
+                    <div class="overlay-message">Right-click is disabled.</div>
+                </div>
+				 <div class="gallery-item">
+                    <img src="./gallery/s15.jpg" alt="Image 15">
+                    <div class="overlay"></div>
+                    <div class="overlay-message">Right-click is disabled.</div>
+                </div>
+       <div class="gallery-item">
+                    <img src="./gallery/s16.jpg" alt="Image 16">
+                    <div class="overlay"></div>
+                    <div class="overlay-message">Right-click is disabled.</div>
+                </div>
+				 <div class="gallery-item">
+                    <img src="./gallery/s17.jpg" alt="Image 17">
+                    <div class="overlay"></div>
+                    <div class="overlay-message">Right-click is disabled.</div>
+                </div>
+		    <div class="gallery-item">
+                    <img src="./gallery/s18.jpg" alt="Image 18">
+                    <div class="overlay"></div>
+                    <div class="overlay-message">Right-click is disabled.</div>
+                </div>
+				 <div class="gallery-item">
+                    <img src="./gallery/s19.jpg" alt="Image 19">
+                    <div class="overlay"></div>
+                    <div class="overlay-message">Right-click is disabled.</div>
+                </div>
+		    <div class="gallery-item">
+                    <img src="./gallery/s20.jpg" alt="Image 20">
+                    <div class="overlay"></div>
+                    <div class="overlay-message">Right-click is disabled.</div>
+                </div>
+				 <div class="gallery-item">
+                    <img src="./gallery/s21.jpg" alt="Image 21">
+                    <div class="overlay"></div>
+                    <div class="overlay-message">Right-click is disabled.</div>
+                </div>
+     <div class="gallery-item">
+                    <img src="./gallery/s22.jpg" alt="Image 22">
+                    <div class="overlay"></div>
+                    <div class="overlay-message">Right-click is disabled.</div>
+                </div>
+				 <div class="gallery-item">
+                    <img src="./gallery/s23.jpg" alt="Image 23">
+                    <div class="overlay"></div>
+                    <div class="overlay-message">Right-click is disabled.</div>
+                </div>
+		    <div class="gallery-item">
+                    <img src="./gallery/s24.jpg" alt="Image 24">
+                    <div class="overlay"></div>
+                    <div class="overlay-message">Right-click is disabled.</div>
+                </div>
+				 <div class="gallery-item">
+                    <img src="./gallery/s25.jpg" alt="Image 25">
+                    <div class="overlay"></div>
+                    <div class="overlay-message">Right-click is disabled.</div>
+                </div>
+		    <div class="gallery-item">
+                    <img src="./gallery/s26.jpg" alt="Image 26">
+                    <div class="overlay"></div>
+                    <div class="overlay-message">Right-click is disabled.</div>
+                </div>
+				 <div class="gallery-item">
+                    <img src="./gallery/s27.jpg" alt="Image 27">
+                    <div class="overlay"></div>
+                    <div class="overlay-message">Right-click is disabled.</div>
+                </div>
+      <div class="gallery-item">
+                    <img src="./gallery/s28.jpg" alt="Image 28">
+                    <div class="overlay"></div>
+                    <div class="overlay-message">Right-click is disabled.</div>
+                </div>
+				 <div class="gallery-item">
+                    <img src="./gallery/s29.jpg" alt="Image 29">
+                    <div class="overlay"></div>
+                    <div class="overlay-message">Right-click is disabled.</div>
+                </div>
+<div class="gallery-item">
+                    <img src="./gallery/s30.jpg" alt="Image 30">
+                    <div class="overlay"></div>
+                    <div class="overlay-message">Right-click is disabled.</div>
+                </div>
+				 <div class="gallery-item">
+                    <img src="./gallery/s31.jpg" alt="Image 31">
+                    <div class="overlay"></div>
+                    <div class="overlay-message">Right-click is disabled.</div>
+                </div>
+<div class="gallery-item">
+                    <img src="./gallery/s32.jpg" alt="Image 32">
+                    <div class="overlay"></div>
+                    <div class="overlay-message">Right-click is disabled.</div>
+                </div>
+				 <div class="gallery-item">
+                    <img src="./gallery/s33.jpg" alt="Image 33">
+                    <div class="overlay"></div>
+                    <div class="overlay-message">Right-click is disabled.</div>
+                </div>
+		    <div class="gallery-item">
+                    <img src="./gallery/s34.jpg" alt="Image 34">
+                    <div class="overlay"></div>
+                    <div class="overlay-message">Right-click is disabled.</div>
+                </div>
+				 <div class="gallery-item">
+                    <img src="./gallery/s35.jpg" alt="Image 35">
+                    <div class="overlay"></div>
+                    <div class="overlay-message">Right-click is disabled.</div>
+                </div>
+<div class="gallery-item">
+                    <img src="./gallery/s36.jpg" alt="Image 36">
+                    <div class="overlay"></div>
+                    <div class="overlay-message">Right-click is disabled.</div>
+                </div>
+				 <div class="gallery-item">
+                    <img src="./gallery/s37.jpg" alt="Image 37">
+                    <div class="overlay"></div>
+                    <div class="overlay-message">Right-click is disabled.</div>
+                </div>
+		    <div class="gallery-item">
+                    <img src="./gallery/s38.jpg" alt="Image 38">
+                    <div class="overlay"></div>
+                    <div class="overlay-message">Right-click is disabled.</div>
+                </div>
+				 <div class="gallery-item">
+                    <img src="./gallery/s39.jpg" alt="Image 39">
+                    <div class="overlay"></div>
+                    <div class="overlay-message">Right-click is disabled.</div>
+                </div>
+		    <div class="gallery-item">
+                    <img src="./gallery/s40.jpg" alt="Image 40">
+                    <div class="overlay"></div>
+                    <div class="overlay-message">Right-click is disabled.</div>
+                </div>
+				 <div class="gallery-item">
+                    <img src="./gallery/s41.jpg" alt="Image 41">
+                    <div class="overlay"></div>
+                    <div class="overlay-message">Right-click is disabled.</div>
+                </div>
+          <div class="gallery-item">
+                    <img src="./gallery/s42.jpg" alt="Image 42">
+                    <div class="overlay"></div>
+                    <div class="overlay-message">Right-click is disabled.</div>
+                </div>
+		    
+            </div>
+        </div>
         <!-- Gallery Group 2 -->
         <div class="gallery-group">
              <h4 style="text-align:center; font-size: 1rem; color: red;">2024 to 2025</h4>
