--- a/ABOUT-US.html
+++ b/ABOUT-US.html
@@ -178,6 +178,9 @@
                     <li class="nav-item">
                         <a class="nav-link text-black active" aria-current="page" href="index.html">HOME</a>
                     </li>
+			<li class="nav-item">
+                        <a class="nav-link text-black" href="Notice.html">DAILY UPDATE</a>
+                    </li>
                     <li class="nav-item">
                         <a class="nav-link text-black" href="ONLINE-TEST.html">ONLINE TEST</a>
                     </li>
@@ -185,7 +188,7 @@
                         <a class="nav-link text-black" href="Government-Girls-College-Daulatpur.html">GALLERY</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-black" href="ABOUT-US.html">ABOUT US</a>
+                        <a class="nav-link text-black" href="ABOUT-US.html">ABOUT</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-black" href="CONTACT-US.html">CONTACT US</a>
