--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
                         <a class="nav-link text-black" href="index.html">HOME</a>
                     </li>
 		<li class="nav-item">
-                        <a class="nav-link text-black" href="Notice.html">Daily Update</a>
+                        <a class="nav-link text-black" href="Notice.html">DAILY UPDATE</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-black" href="ONLINE-TEST.html">ONLINE TEST</a>
