--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
 
 /* Caption text */
 .text {
-  color: #f2f2f2;
+  color: #000000;
   font-size: 15px;
   padding: 8px 12px;
   position: absolute;
@@ -451,13 +451,13 @@ As you move forward in your studies, always remember that education is not just 
 <div class="mySlides fade">
   <div class="numbertext">1 / 9</div>
   <img src="./gallery/TB2.jpg" style="width:100%">
-  <div class="text">Caption Text</div>
+  <div class="text">At Govt Girls College Daulatpur<br>On the eve of world TB Day a Session for awareness held with collaboration of the Department of Health Taluka Qazi Ahmed SBA</div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext">2 / 9</div>
   <img src="./gallery/TB1.jpg" style="width:100%">
-  <div class="text">Caption Two</div>
+  <div class="text">At Govt Girls College Daulatpur<br>On the eve of world TB Day a Session for awareness held with collaboration of the Department of Health Taluka Qazi Ahmed SBA</div>
 </div>
 
 <div class="mySlides fade">
